<resources>
    <string name="app_name" translatable="false">GoRead library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_category">Choose Category...!</string>
    <string name="add_admins">Add Admins</string>
    <string name="username">User name </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>

    <string name="google_map_api_key">AIzaSyAgx2ka4csNPgHpJ3OxqAmD3H4T_gp8QaE</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="add_book">Add Book</string>
    <string name="book_name">Book Name</string>
    <string name="book_description">Book Description</string>
    <string name="price">Price</string>
    <string name="book_quote">Book_quote</string>
    <string name="category">Category</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="philosophy_amp_psychology"><![CDATA[Philosophy & Psychology]]></string>
    <string name="religion">Religion</string>
    <string name="social_science">Social Science</string>
    <string name="classic">Classic</string>
    <string name="languages">Languages</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="art_amp_recreation"><![CDATA[Art & Recreation]]></string>
    <string name="literature">Literature</string>
    <string name="history_amp_geography"><![CDATA[History & Geography]]></string>
    <string name="upload">Upload</string>
    <string name="add_driver">Add Driver</string>
    <string name="driver_name">Driver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_library">Add Library</string>
    <string name="library_name">Library Name</string>
    <string name="library_address">Library Address</string>
    <string name="phone">Phone</string>
    <string name="the_quote">The Quote</string>
    <string name="from_book">from book</string>
    <string name="add_quote">Add Quote</string>
    <string name="admins_list">Admins List</string>
    <string name="books_list">Books</string>
    <string name="drivers_list">Drivers List</string>
    <string name="libraries_list">Libraries List</string>
    <string name="all_notifications">All Notifications</string>
    <string name="orders_list">Orders List</string>
    <string name="users_list">Users List</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="the_address">The Address</string>
    <string name="library_number">Library Number</string>
    <string name="the_number">The Number</string>
    <string name="my_earnings">My Earnings</string>
    <string name="total_orders">Total orders:</string>
    <string name="_1685">1685</string>
    <string name="total_revenues">Total revenues:</string>
    <string name="guidelines">Guidelines</string>
    <string name="to_provide_a_safe_and_trusted_experience_for_everyone_here_are_some_guidelines_you_must_know">To provide a safe and trusted experience for everyone here are some guidelines you must know:</string>
    <string name="admin_will_have_full_control_like_n_deleting_or_blocking_the_library_n_deleting_quotes_or_books_n_chats_with_customers_will_be_viewed">•Admin will have full control like:\n Deleting or blocking the library.\n Deleting quotes or books.\n Chats with customers will be viewed.</string>
    <string name="pictures_uploaded_must_be_appropriate">•Pictures uploaded must be appropriate.</string>
    <string name="inappropriate_words_will_be_censored">•Inappropriate words will be censored.</string>
    <string name="the_library_owner_is_not_allowed_to_share_or_publish_his_own_personal_contact_information">•The library owner is not allowed to share or publish his own personal contact information.</string>
    <string name="i_have_read_and_agreed_to_all_terms_and_conditions">I have read and agreed to all Terms and Conditions</string>
    <string name="done">Done</string>
    <string name="admin">Admin:</string>
    <string name="save">save</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="the_title">The Title</string>
    <string name="the_body">The Body</string>
    <string name="publish">Publish</string>
    <string name="admin_name">Admin Name</string>
    <string name="_1500">1500</string>
    <string name="are_you_sure_you_want_to_block">Are you sure you want to block ?</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_use_your_credit">Do you want to use your credit?</string>
    <string name="you_have_only_one_credit_today">You have only one credit today</string>
    <string name="share">Share</string>
    <string name="you_already_used_your_credit_today">You already used your credit today</string>
    <string name="ok">Ok</string>
    <string name="order_id">Order ID:</string>
    <string name="_1385">1385</string>
    <string name="date">Date:</string>
    <string name="order_date">order date</string>
    <string name="no_of_book">No.of Book:</string>
    <string name="_1">1</string>
    <string name="total_amount">Total Amount:</string>
    <string name="_769876">769876</string>
    <string name="yr">YR</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="libraries">Libraries</string>
    <string name="drivers">Drivers</string>
    <string name="users">Users</string>
    <string name="notifications">Notifications</string>
    <string name="community">Community</string>
    <string name="admins">Admins</string>
    <string name="number_of_sold_book">Number of sold book</string>
    <string name="new_orders">New Orders</string>
    <string name="upload_book">Upload Book</string>
    <string name="upload_quotes">Upload Quotes</string>
    <string name="chat">Chat</string>
    <string name="address">Address</string>
    <string name="id">ID:</string>
    <string name="the_id">The ID</string>
    <string name="book">Book</string>
    <string name="_12312">12312</string>
    <string name="note">Note:</string>
    <string name="dasdvkajsdvkjas">dasdvkajsdvkjas</string>
    <string name="driver">Driver:</string>
    <string name="confirm">Confirm</string>
    <string name="jjjjjjjjjjjjjjjjjjjjjjjjjjfjjfjffffffffffffffffffffffffffffffffffffffffffffffffffffffffff_fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj_fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjfjjjjjjjjjjjjjjjjjjjj_fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj">jjjjjjjjjjjjjjjjjjjjjjjjjjfjjfjffffffffffffffffffffffffffffffffffffffffffffffffffffffffff fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjfjjjjjjjjjjjjjjjjjjjj fjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="books">Books</string>
    <string name="quotes">Quotes</string>
    <string name="earnings">Earnings</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="always_keep_your_data_up_to_date">Always keep your data up to date.</string>
    <string name="reset">Reset</string>
    <string name="please_enter_your_email_address_or_phone_number">Please enter your email address or phone number</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="do_you_want_to_sign_out">Do you want to sign out</string>
    <string name="yes">yes</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="you_inserted_wrong_or_invalidinformation_please_try_again">You inserted wrong or invalidinformation please try again</string>
    <string name="try_again">Try again</string>
    <string name="quotes_list">Quotes list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello Husa</string>
    <string name="_000">000</string>
    <string name="new_order">New Orders</string>
    <string name="old_order">Old  Orders</string>
    <string name="search">search</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="Can_not_recover_this_item">Can\'t  recover this item!</string>
    <string name="yes_delete_it">Yes,delete it!</string>
    <string name="our_product_has_been_deleted">Your item has been deleted!</string>
    <string name="status_changed">Status Changed</string>
    <string name="malak">Malak:</string>
    <string name="library">Library:</string>
    <string name="order_items">Order Items</string>
    <string name="drame">Drama</string>
    <string name="romanntic">Romantic</string>
    <string name="Philosophy_and_Psychology"><![CDATA[Philosophy & Psychology]]></string>
    <string name="General_Knowledge">General Knowledge</string>
    <string name="Religion">Religion</string>
    <string name="Social_Science">Social Science</string>
    <string name="Languages">Languages</string>
    <string name="Classic">Classic</string>
    <string name="Science">Science</string>
    <string name="Technology">Technology</string>
    <string name="Literature">Literature</string>
    <string name="Art_and_Recreation"><![CDATA[Art & Recreation]]></string>
    <string name="history_and_geography"><![CDATA[History & Geography]]></string>
    <string name="Action">Action</string>
    <string name="chat_list">chat list</string>
    <string name="your_item_has_benn_deleted">Your item has been deleted!</string>
    <string name="Deleted">Deleted!</string>
    <string name="_4_mins_ago">4 Mins Ago</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="new_order_lib">New Order</string>
    <string name="old_order_lib">Old Order</string>
    <string name="change_password">Change password</string>
    <string name="you_must_change_password_after_your_first_login">You must change password after your first Login</string>
    <string name="change">Change</string>
    <string name="bad_internet_connection">Bad internet connection</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="add_notification">Add Notification</string>
    <string name="edit_driver">Edit Driver</string>
</resources>