<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp"
    android:textAlignment="center"
    app:cardCornerRadius="20dp">


    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_gravity="center"
        android:background="@color/mainColor"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_error_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/invalid_data"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/you_inserted_wrong_or_invalidinformation_please_try_again"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>

