<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:padding="10dp"
    android:textAlignment="center"
    app:cardCornerRadius="20dp">


    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:background="@color/mainColor"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_no_wifi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bad_internet_connection"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/please_check_your_connection"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/mainColor"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>

