<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:textAlignment="center"
    app:cardCornerRadius="20dp">


    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/constraint"
        android:layout_width="316dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView

            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_delete_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>

