<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLocation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/mainColor"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_new_order_icon" />


                <TextView
                    android:id="@+id/OrderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/new_order"
                    android:textColor="@color/mainColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/the_id"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_note"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:id="@+id/tv_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_4_mins_ago"
                    android:textSize="14dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/btnApprove"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/circled_bg_maincolor"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button

                android:id="@+id/btnDecline"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:background="@drawable/circled_bg_maincolor"
                android:text="@string/decline"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>