<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLocation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/mainColor"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/change_password"
            android:textColor="@color/mainColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResetMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/you_must_change_password_after_your_first_login"
            android:textColor="@color/mainColor"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:baselineAligned="true"
            android:imeOptions="actionNext"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/mainColor"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:paddingBottom="-10dp"
                android:singleLine="true"


                />

        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_button"
                android:padding="5dp"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:outlineAmbientShadowColor="@color/brown"
                android:visibility="gone" />


        </FrameLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>